# navai-stt-tts

./: .gitignore  README.md  config.py  dataset_loader.py  dis_trainer.py  main.py  main_v3.py  pyproject.toml  setup_and_train.sh  test.ipynb  test_config.py  train_accelerate.py
archive/: main.py  main_v4.py  new_trainer.py  train_accelerate.py  train_whisper_trainer.py
audio_files/: audio_0.flac  audio_1.flac  audio_10.flac  audio_11.flac  audio_12.flac  audio_13.flac  audio_14.flac  audio_15.flac  audio_16.flac  audio_17.flac  audio_18.flac  audio_19.flac  audio_2.flac  audio_20.flac  audio_21.flac  audio_22.flac  audio_23.flac  audio_24.flac  audio_25.flac  audio_26.flac  audio_27.flac  audio_28.flac  audio_29.flac  audio_3.flac  audio_30.flac  audio_31.flac  audio_32.flac  audio_33.flac  audio_34.flac  audio_35.flac  audio_36.flac  audio_37.flac  audio_38.flac  audio_39.flac  audio_4.flac  audio_40.flac  audio_41.flac  audio_42.flac  audio_43.flac  audio_44.flac  (+60 more)
distributed_training/: ddp.bash  launch_accelerate.sh  main.py  main_v2.py  train_local.sh
stt/: metadata.json  model.py  test.ipynb
stt/multi_gpu/: model.py
stt/single_gpu/: augmentation.py  model.py
